7552 fix titles page and align for mobile

--- a/apps/festival/festival/src/app/marketplace/title/view/view.component.scss
+++ b/apps/festival/festival/src/app/marketplace/title/view/view.component.scss
@@ -8,7 +8,7 @@ movie-header-cta {
     grid-gap: 16px;
   }
   
-  a {
+  a, button {
     width: fit-content;
   }
 }
